[package]
name = "stuw81300"
version = "0.2.0"
edition = "2021"
readme = "README.md"
description = "An embedded-hal driver for the STuW81300"
repository = "https://github.com/kiranshila/stuw81300/"
license = "MIT OR Apache-2.0"
keywords = ["no-std", "driver", "spi", "synthesizer", "rf"]
categories = ["embedded", "no-std"]

[dependencies]
embedded-hal = "0.2"
micromath = "2.0"

[dev-dependencies]
embedded-hal-mock = "0.8"
proptest = "1.0"

[badges]
maintenance = { status = "actively-developed" }
